[package]
name = "vpx"
version = "0.3.0"
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
license = "MPL-2.0"
repository = "https://github.com/DiamondLovesYou/rust-vpx"
keywords = ["vp9", "vp8", "webm", "video-encoder", "video-decoder"]
description = "Rust idiomatic wrapper to libvpx"

[lib]
name = "vpx"
path = "src/lib/lib.rs"

[dependencies.libvpx-sys]
version = "*"
path = "src/sys"

[dependencies]
libc = "*"
